# AscendLLM

./: CMakeLists.txt  README.md
csrc/: llm.cpp  utils.cpp
include/: llm.h  utils.h
scripts/: generate_data.py
